# neo4j-flask-api

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
app/: app.py  commands.py  models.py
app/data/: sample_data.cypher  seed_data.cypher
app/routes/: department.py  departments.py  employees.py  seed.py
app/utils/: exception_handler.py  handle_exception.py
