[tool.poetry]
name = "neo4j-flask-api"
version = "0.1.0"
description = ""
authors = ["Paw565pl <paw565pl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
anyio = "^4.4.0"
asgiref = "^3.8.1"
blinker = "^1.8.2"
click = "^8.1.7"
flask = "^3.0.3"
gunicorn = "^22.0.0"
h11 = "^0.14.0"
httptools = "^0.6.1"
idna = "^3.7"
itsdangerous = "^2.2.0"
jinja2 = "^3.1.4"
markupsafe = "^2.1.5"
packaging = "^24.1"
python-dotenv = "^1.0.1"
pytz = "^2024.1"
pyyaml = "^6.0.1"
six = "^1.16.0"
sniffio = "^1.3.1"
uvicorn = "^0.30.1"
uvloop = "^0.19.0"
watchfiles = "^0.22.0"
websockets = "^12.0"
werkzeug = "^3.0.3"
neomodel = "5.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
